hibernate-examples 테스트 통과